[package]
name = "tcptop"
version = "0.1.0"
authors = ["Andrew Crutchfield <andrewjcrutchfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nell = "0.3.0"
tui = "0.13"
termion = "1.5.5"
rand = "0.7.3"
trust-dns-resolver = "0.19.5"
backtrace = "0.3.40"
